--- a/code/MoodSync/app/src/main/res/layout/add_mood_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/add_mood_fragment.xml
@@ -41,10 +41,10 @@
             android:layout_below="@+id/rectangle_2"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="44dp"
+            android:layout_marginStart="36dp"
             android:layout_marginTop="55dp"
-            android:layout_marginEnd="35dp"
-            android:background="@drawable/newfrosted"
+            android:layout_marginEnd="36dp"
+            android:background="@drawable/newfrostedspinner"
             android:clipToOutline="true"
             android:dropDownWidth="368dp"
             android:entries="@array/spinner_items"
@@ -111,7 +111,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/pick_emoticon"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="8dp"
+            android:fadingEdge="none"
+            android:overScrollMode="never"
+            android:scrollbars="none">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -234,6 +237,8 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_below="@id/add_desc"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_marginStart="36dp"
             android:layout_marginTop="21dp"
             android:layout_marginEnd="36dp"
@@ -250,8 +255,10 @@
             android:layout_width="306dp"
             android:layout_height="163dp"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="59dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="55dp"
             android:layout_marginTop="80dp"
+            android:layout_marginEnd="45dp"
             android:background="@drawable/rectangle_2" />
 
         <ImageView
