final-working_sofar

--- a/code/MoodSync/app/src/main/res/layout/mood_history_fragment.xml
+++ b/code/MoodSync/app/src/main/res/layout/mood_history_fragment.xml
@@ -34,7 +34,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="Back"
-        android:background="@drawable/newfrosted"
+        android:textColor="#203434"
+        android:backgroundTint="#D7D2CC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
