--- a/code/MoodSync/app/src/main/res/layout/edit_mood_fragment2.xml
+++ b/code/MoodSync/app/src/main/res/layout/edit_mood_fragment2.xml
@@ -78,6 +78,7 @@
         android:textColorHint="#FFFFFF"
         android:textSize="16sp"
         android:minHeight="60dp"
+        app:cornerRadius="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/triggerLabel"
@@ -191,12 +192,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/editmood"
         app:layout_constraintStart_toStartOf="parent"
-        android:backgroundTint="#995F9A9A"
-        app:cornerRadius="8dp"
+        android:backgroundTint="#35443f"
+        app:cornerRadius="30dp"
         app:strokeColor="#B2DFDB"
         app:strokeWidth="1dp"
-        app:backgroundTint="#9ca49c"
-        android:background="@drawable/rounded_text"/>
+        app:backgroundTint="#35443f"
+        />
 
     <Button
         android:id="@+id/editmood"
@@ -212,7 +213,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/backbutton"
         android:backgroundTint="#D7D2CC"
-        app:cornerRadius="15dp"
+        app:cornerRadius="30dp"
         app:strokeWidth="1dp"
         app:backgroundTint="#9ca49c" />
 
