--- a/code/MoodSync/app/src/main/res/drawable/newfrostedspinner.xml
+++ b/code/MoodSync/app/src/main/res/drawable/newfrostedspinner.xml
@@ -1,21 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="414dp"
-    android:height="124dp"
-    android:viewportWidth="414"
-    android:viewportHeight="124">
-
-    <group>
-        <path
-            android:pathData="M20,0L394,0A20,20 0,0 1,414 20L414,104A20,20 0,0 1,394 124L20,124A20,20 0,0 1,0 104L0,20A20,20 0,0 1,20 0z"/>
-
-        <path
-            android:pathData="M0,0V124H414V0"
-            android:fillColor="#33FFFFFF"/> <!-- Semi-transparent white -->
-
-        <path
-            android:pathData="M20,0L394,0A20,20 0,0 1,414 20L414,104A20,20 0,0 1,394 124L20,124A20,20 0,0 1,0 104L0,20A20,20 0,0 1,20 0z"
-            android:strokeWidth="6"
-            android:strokeColor="#FFFFFF"/>
-    </group>
-</vector>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#80FFFFFF" />  <!-- Translucent white -->
+    <corners android:radius="8dp" /> <!-- Rounded corners -->
+    <stroke
+        android:width="1dp"
+        android:color="#BDBDBD" /> <!-- Light gray border -->
+</shape>
