--- a/code/MoodSync/app/src/main/res/values/colors.xml
+++ b/code/MoodSync/app/src/main/res/values/colors.xml
@@ -10,4 +10,12 @@
         <color name="button_selected">#7FBFBF</color>
 
 
+        <color name="primary_text_color">#FFFFFF</color>
+        <color name="secondary_text_color">#BDBDBD</color>
+        <color name="hint_text_color">#757575</color>
+        <color name="cancel_button_color">#F44336</color>
+        <color name="spinner_dropdown_background">#FFFFFF</color>
+
+
+
 </resources>
